Compiler/Entire-Compiler/ExprEval.output
Grammar

    0 $accept: Prog $end

    1 Prog: Declarations StmtSeq

    2 Declarations: Dec Declarations
    3             | ε

    4 $@1: ε

    5 Dec: Int Ident $@1 ';'

    6 StmtSeq: Stmt StmtSeq
    7        | ε

    8 Stmt: Print '(' ExprList ')' ';'
    9     | Printstrings '(' StrList ')' ';'
   10     | Printlines '(' ExprL0 ')' ';'
   11     | Printspaces '(' ExprL0 ')' ';'
   12     | Read '(' IdentList ')' ';'
   13     | IF '(' ExprL0 ')' '{' StmtSeq '}'
   14     | IF '(' ExprL0 ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'
   15     | WHILE '(' ExprL0 ')' '{' StmtSeq '}'
   16     | FOR '(' AssnmtStmt ';' ExprL0 ';' AssnmtStmt ')' '{' StmtSeq '}'
   17     | AssnmtStmt ';'

   18 AssnmtStmt: Id '=' ExprL0

   19 ExprList: ExprL0 ',' ExprList
   20         | ExprL0

   21 ExprL0: ExprL0 OR ExprL1
   22       | ExprL0 AND ExprL1
   23       | ExprL1

   24 ExprL1: '!' ExprL2
   25       | ExprL2

   26 ExprL2: ExprL2 NOT_EQ ExprL3
   27       | ExprL2 EQ ExprL3
   28       | ExprL2 LT_OR_EQ ExprL3
   29       | ExprL2 GT_OR_EQ ExprL3
   30       | ExprL2 LT ExprL3
   31       | ExprL2 GT ExprL3
   32       | ExprL3

   33 ExprL3: ExprL3 '+' ExprL4
   34       | ExprL3 '-' ExprL4
   35       | ExprL4

   36 ExprL4: ExprL4 '*' ExprL5
   37       | ExprL4 '/' ExprL5
   38       | ExprL4 '%' ExprL5
   39       | ExprL5

   40 ExprL5: ExprL6 '^' ExprL5
   41       | ExprL6

   42 ExprL6: '(' ExprL0 ')'
   43       | ExprL7

   44 ExprL7: '-' ExprL6
   45       | IntLit
   46       | Ident

   47 IdentList: Id ',' IdentList
   48          | Id

   49 StrList: StrLit

   50 Id: Ident


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 24
    '%' (37) 38
    '(' (40) 8 9 10 11 12 13 14 15 16 42
    ')' (41) 8 9 10 11 12 13 14 15 16 42
    '*' (42) 36
    '+' (43) 33
    ',' (44) 19 47
    '-' (45) 34 44
    '/' (47) 37
    ';' (59) 5 8 9 10 11 12 16 17
    '=' (61) 18
    '^' (94) 40
    '{' (123) 13 14 15 16
    '}' (125) 13 14 15 16
    error (256)
    Int (258) 5
    Ident (259) 5 46 50
    StrLit (260) 49
    Print (261) 8
    Printstrings (262) 9
    Printlines (263) 10
    Printspaces (264) 11
    Read (265) 12
    IF (266) 13 14
    ELSE (267) 14
    WHILE (268) 15
    FOR (269) 16
    OR (270) 21
    AND (271) 22
    NOT_EQ (272) 26
    EQ (273) 27
    LT_OR_EQ (274) 28
    GT_OR_EQ (275) 29
    LT (276) 30
    GT (277) 31
    IntLit (278) 45


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    Prog (39)
        on left: 1
        on right: 0
    Declarations (40)
        on left: 2 3
        on right: 1 2
    Dec (41)
        on left: 5
        on right: 2
    $@1 (42)
        on left: 4
        on right: 5
    StmtSeq <InstrSeq> (43)
        on left: 6 7
        on right: 1 6 13 14 15 16
    Stmt <InstrSeq> (44)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 6
    AssnmtStmt <InstrSeq> (45)
        on left: 18
        on right: 16 17
    ExprList <ExprResList> (46)
        on left: 19 20
        on right: 8 19
    ExprL0 <ExprRes> (47)
        on left: 21 22 23
        on right: 10 11 13 14 15 16 18 19 20 21 22 42
    ExprL1 <ExprRes> (48)
        on left: 24 25
        on right: 21 22 23
    ExprL2 <ExprRes> (49)
        on left: 26 27 28 29 30 31 32
        on right: 24 25 26 27 28 29 30 31
    ExprL3 <ExprRes> (50)
        on left: 33 34 35
        on right: 26 27 28 29 30 31 32 33 34
    ExprL4 <ExprRes> (51)
        on left: 36 37 38 39
        on right: 33 34 35 36 37 38
    ExprL5 <ExprRes> (52)
        on left: 40 41
        on right: 36 37 38 39 40
    ExprL6 <ExprRes> (53)
        on left: 42 43
        on right: 40 41 44
    ExprL7 <ExprRes> (54)
        on left: 44 45 46
        on right: 43
    IdentList <IdList> (55)
        on left: 47 48
        on right: 12 47
    StrList <string> (56)
        on left: 49
        on right: 9
    Id <string> (57)
        on left: 50
        on right: 18 47 48


State 0

    0 $accept: • Prog $end

    Int  shift, and go to state 1

    $default  reduce using rule 3 (Declarations)

    Prog          go to state 2
    Declarations  go to state 3
    Dec           go to state 4


State 1

    5 Dec: Int • Ident $@1 ';'

    Ident  shift, and go to state 5


State 2

    0 $accept: Prog • $end

    $end  shift, and go to state 6


State 3

    1 Prog: Declarations • StmtSeq

    Ident         shift, and go to state 7
    Print         shift, and go to state 8
    Printstrings  shift, and go to state 9
    Printlines    shift, and go to state 10
    Printspaces   shift, and go to state 11
    Read          shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    FOR           shift, and go to state 15

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq     go to state 16
    Stmt        go to state 17
    AssnmtStmt  go to state 18
    Id          go to state 19


State 4

    2 Declarations: Dec • Declarations

    Int  shift, and go to state 1

    $default  reduce using rule 3 (Declarations)

    Declarations  go to state 20
    Dec           go to state 4


State 5

    5 Dec: Int Ident • $@1 ';'

    $default  reduce using rule 4 ($@1)

    $@1  go to state 21


State 6

    0 $accept: Prog $end •

    $default  accept


State 7

   50 Id: Ident •

    $default  reduce using rule 50 (Id)


State 8

    8 Stmt: Print • '(' ExprList ')' ';'

    '('  shift, and go to state 22


State 9

    9 Stmt: Printstrings • '(' StrList ')' ';'

    '('  shift, and go to state 23


State 10

   10 Stmt: Printlines • '(' ExprL0 ')' ';'

    '('  shift, and go to state 24


State 11

   11 Stmt: Printspaces • '(' ExprL0 ')' ';'

    '('  shift, and go to state 25


State 12

   12 Stmt: Read • '(' IdentList ')' ';'

    '('  shift, and go to state 26


State 13

   13 Stmt: IF • '(' ExprL0 ')' '{' StmtSeq '}'
   14     | IF • '(' ExprL0 ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'

    '('  shift, and go to state 27


State 14

   15 Stmt: WHILE • '(' ExprL0 ')' '{' StmtSeq '}'

    '('  shift, and go to state 28


State 15

   16 Stmt: FOR • '(' AssnmtStmt ';' ExprL0 ';' AssnmtStmt ')' '{' StmtSeq '}'

    '('  shift, and go to state 29


State 16

    1 Prog: Declarations StmtSeq •

    $default  reduce using rule 1 (Prog)


State 17

    6 StmtSeq: Stmt • StmtSeq

    Ident         shift, and go to state 7
    Print         shift, and go to state 8
    Printstrings  shift, and go to state 9
    Printlines    shift, and go to state 10
    Printspaces   shift, and go to state 11
    Read          shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    FOR           shift, and go to state 15

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq     go to state 30
    Stmt        go to state 17
    AssnmtStmt  go to state 18
    Id          go to state 19


State 18

   17 Stmt: AssnmtStmt • ';'

    ';'  shift, and go to state 31


State 19

   18 AssnmtStmt: Id • '=' ExprL0

    '='  shift, and go to state 32


State 20

    2 Declarations: Dec Declarations •

    $default  reduce using rule 2 (Declarations)


State 21

    5 Dec: Int Ident $@1 • ';'

    ';'  shift, and go to state 33


State 22

    8 Stmt: Print '(' • ExprList ')' ';'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprList  go to state 39
    ExprL0    go to state 40
    ExprL1    go to state 41
    ExprL2    go to state 42
    ExprL3    go to state 43
    ExprL4    go to state 44
    ExprL5    go to state 45
    ExprL6    go to state 46
    ExprL7    go to state 47


State 23

    9 Stmt: Printstrings '(' • StrList ')' ';'

    StrLit  shift, and go to state 48

    StrList  go to state 49


State 24

   10 Stmt: Printlines '(' • ExprL0 ')' ';'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 50
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 25

   11 Stmt: Printspaces '(' • ExprL0 ')' ';'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 51
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 26

   12 Stmt: Read '(' • IdentList ')' ';'

    Ident  shift, and go to state 7

    IdentList  go to state 52
    Id         go to state 53


State 27

   13 Stmt: IF '(' • ExprL0 ')' '{' StmtSeq '}'
   14     | IF '(' • ExprL0 ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 54
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 28

   15 Stmt: WHILE '(' • ExprL0 ')' '{' StmtSeq '}'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 55
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 29

   16 Stmt: FOR '(' • AssnmtStmt ';' ExprL0 ';' AssnmtStmt ')' '{' StmtSeq '}'

    Ident  shift, and go to state 7

    AssnmtStmt  go to state 56
    Id          go to state 19


State 30

    6 StmtSeq: Stmt StmtSeq •

    $default  reduce using rule 6 (StmtSeq)


State 31

   17 Stmt: AssnmtStmt ';' •

    $default  reduce using rule 17 (Stmt)


State 32

   18 AssnmtStmt: Id '=' • ExprL0

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 57
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 33

    5 Dec: Int Ident $@1 ';' •

    $default  reduce using rule 5 (Dec)


State 34

   46 ExprL7: Ident •

    $default  reduce using rule 46 (ExprL7)


State 35

   45 ExprL7: IntLit •

    $default  reduce using rule 45 (ExprL7)


State 36

   42 ExprL6: '(' • ExprL0 ')'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 58
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 37

   24 ExprL1: '!' • ExprL2

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL2  go to state 59
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 38

   44 ExprL7: '-' • ExprL6

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL6  go to state 60
    ExprL7  go to state 47


State 39

    8 Stmt: Print '(' ExprList • ')' ';'

    ')'  shift, and go to state 61


State 40

   19 ExprList: ExprL0 • ',' ExprList
   20         | ExprL0 •
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ','  shift, and go to state 64

    $default  reduce using rule 20 (ExprList)


State 41

   23 ExprL0: ExprL1 •

    $default  reduce using rule 23 (ExprL0)


State 42

   25 ExprL1: ExprL2 •
   26 ExprL2: ExprL2 • NOT_EQ ExprL3
   27       | ExprL2 • EQ ExprL3
   28       | ExprL2 • LT_OR_EQ ExprL3
   29       | ExprL2 • GT_OR_EQ ExprL3
   30       | ExprL2 • LT ExprL3
   31       | ExprL2 • GT ExprL3

    NOT_EQ    shift, and go to state 65
    EQ        shift, and go to state 66
    LT_OR_EQ  shift, and go to state 67
    GT_OR_EQ  shift, and go to state 68
    LT        shift, and go to state 69
    GT        shift, and go to state 70

    $default  reduce using rule 25 (ExprL1)


State 43

   32 ExprL2: ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 32 (ExprL2)


State 44

   35 ExprL3: ExprL4 •
   36 ExprL4: ExprL4 • '*' ExprL5
   37       | ExprL4 • '/' ExprL5
   38       | ExprL4 • '%' ExprL5

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75

    $default  reduce using rule 35 (ExprL3)


State 45

   39 ExprL4: ExprL5 •

    $default  reduce using rule 39 (ExprL4)


State 46

   40 ExprL5: ExprL6 • '^' ExprL5
   41       | ExprL6 •

    '^'  shift, and go to state 76

    $default  reduce using rule 41 (ExprL5)


State 47

   43 ExprL6: ExprL7 •

    $default  reduce using rule 43 (ExprL6)


State 48

   49 StrList: StrLit •

    $default  reduce using rule 49 (StrList)


State 49

    9 Stmt: Printstrings '(' StrList • ')' ';'

    ')'  shift, and go to state 77


State 50

   10 Stmt: Printlines '(' ExprL0 • ')' ';'
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ')'  shift, and go to state 78


State 51

   11 Stmt: Printspaces '(' ExprL0 • ')' ';'
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ')'  shift, and go to state 79


State 52

   12 Stmt: Read '(' IdentList • ')' ';'

    ')'  shift, and go to state 80


State 53

   47 IdentList: Id • ',' IdentList
   48          | Id •

    ','  shift, and go to state 81

    $default  reduce using rule 48 (IdentList)


State 54

   13 Stmt: IF '(' ExprL0 • ')' '{' StmtSeq '}'
   14     | IF '(' ExprL0 • ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ')'  shift, and go to state 82


State 55

   15 Stmt: WHILE '(' ExprL0 • ')' '{' StmtSeq '}'
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ')'  shift, and go to state 83


State 56

   16 Stmt: FOR '(' AssnmtStmt • ';' ExprL0 ';' AssnmtStmt ')' '{' StmtSeq '}'

    ';'  shift, and go to state 84


State 57

   18 AssnmtStmt: Id '=' ExprL0 •
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63

    $default  reduce using rule 18 (AssnmtStmt)


State 58

   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1
   42 ExprL6: '(' ExprL0 • ')'

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ')'  shift, and go to state 85


State 59

   24 ExprL1: '!' ExprL2 •
   26 ExprL2: ExprL2 • NOT_EQ ExprL3
   27       | ExprL2 • EQ ExprL3
   28       | ExprL2 • LT_OR_EQ ExprL3
   29       | ExprL2 • GT_OR_EQ ExprL3
   30       | ExprL2 • LT ExprL3
   31       | ExprL2 • GT ExprL3

    NOT_EQ    shift, and go to state 65
    EQ        shift, and go to state 66
    LT_OR_EQ  shift, and go to state 67
    GT_OR_EQ  shift, and go to state 68
    LT        shift, and go to state 69
    GT        shift, and go to state 70

    $default  reduce using rule 24 (ExprL1)


State 60

   44 ExprL7: '-' ExprL6 •

    $default  reduce using rule 44 (ExprL7)


State 61

    8 Stmt: Print '(' ExprList ')' • ';'

    ';'  shift, and go to state 86


State 62

   21 ExprL0: ExprL0 OR • ExprL1

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL1  go to state 87
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 63

   22 ExprL0: ExprL0 AND • ExprL1

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL1  go to state 88
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 64

   19 ExprList: ExprL0 ',' • ExprList

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprList  go to state 89
    ExprL0    go to state 40
    ExprL1    go to state 41
    ExprL2    go to state 42
    ExprL3    go to state 43
    ExprL4    go to state 44
    ExprL5    go to state 45
    ExprL6    go to state 46
    ExprL7    go to state 47


State 65

   26 ExprL2: ExprL2 NOT_EQ • ExprL3

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL3  go to state 90
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 66

   27 ExprL2: ExprL2 EQ • ExprL3

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL3  go to state 91
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 67

   28 ExprL2: ExprL2 LT_OR_EQ • ExprL3

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL3  go to state 92
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 68

   29 ExprL2: ExprL2 GT_OR_EQ • ExprL3

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL3  go to state 93
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 69

   30 ExprL2: ExprL2 LT • ExprL3

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL3  go to state 94
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 70

   31 ExprL2: ExprL2 GT • ExprL3

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL3  go to state 95
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 71

   33 ExprL3: ExprL3 '+' • ExprL4

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL4  go to state 96
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 72

   34 ExprL3: ExprL3 '-' • ExprL4

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL4  go to state 97
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 73

   36 ExprL4: ExprL4 '*' • ExprL5

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL5  go to state 98
    ExprL6  go to state 46
    ExprL7  go to state 47


State 74

   37 ExprL4: ExprL4 '/' • ExprL5

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL5  go to state 99
    ExprL6  go to state 46
    ExprL7  go to state 47


State 75

   38 ExprL4: ExprL4 '%' • ExprL5

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL5  go to state 100
    ExprL6  go to state 46
    ExprL7  go to state 47


State 76

   40 ExprL5: ExprL6 '^' • ExprL5

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '-'     shift, and go to state 38

    ExprL5  go to state 101
    ExprL6  go to state 46
    ExprL7  go to state 47


State 77

    9 Stmt: Printstrings '(' StrList ')' • ';'

    ';'  shift, and go to state 102


State 78

   10 Stmt: Printlines '(' ExprL0 ')' • ';'

    ';'  shift, and go to state 103


State 79

   11 Stmt: Printspaces '(' ExprL0 ')' • ';'

    ';'  shift, and go to state 104


State 80

   12 Stmt: Read '(' IdentList ')' • ';'

    ';'  shift, and go to state 105


State 81

   47 IdentList: Id ',' • IdentList

    Ident  shift, and go to state 7

    IdentList  go to state 106
    Id         go to state 53


State 82

   13 Stmt: IF '(' ExprL0 ')' • '{' StmtSeq '}'
   14     | IF '(' ExprL0 ')' • '{' StmtSeq '}' ELSE '{' StmtSeq '}'

    '{'  shift, and go to state 107


State 83

   15 Stmt: WHILE '(' ExprL0 ')' • '{' StmtSeq '}'

    '{'  shift, and go to state 108


State 84

   16 Stmt: FOR '(' AssnmtStmt ';' • ExprL0 ';' AssnmtStmt ')' '{' StmtSeq '}'

    Ident   shift, and go to state 34
    IntLit  shift, and go to state 35
    '('     shift, and go to state 36
    '!'     shift, and go to state 37
    '-'     shift, and go to state 38

    ExprL0  go to state 109
    ExprL1  go to state 41
    ExprL2  go to state 42
    ExprL3  go to state 43
    ExprL4  go to state 44
    ExprL5  go to state 45
    ExprL6  go to state 46
    ExprL7  go to state 47


State 85

   42 ExprL6: '(' ExprL0 ')' •

    $default  reduce using rule 42 (ExprL6)


State 86

    8 Stmt: Print '(' ExprList ')' ';' •

    $default  reduce using rule 8 (Stmt)


State 87

   21 ExprL0: ExprL0 OR ExprL1 •

    $default  reduce using rule 21 (ExprL0)


State 88

   22 ExprL0: ExprL0 AND ExprL1 •

    $default  reduce using rule 22 (ExprL0)


State 89

   19 ExprList: ExprL0 ',' ExprList •

    $default  reduce using rule 19 (ExprList)


State 90

   26 ExprL2: ExprL2 NOT_EQ ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 26 (ExprL2)


State 91

   27 ExprL2: ExprL2 EQ ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 27 (ExprL2)


State 92

   28 ExprL2: ExprL2 LT_OR_EQ ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 28 (ExprL2)


State 93

   29 ExprL2: ExprL2 GT_OR_EQ ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 29 (ExprL2)


State 94

   30 ExprL2: ExprL2 LT ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 30 (ExprL2)


State 95

   31 ExprL2: ExprL2 GT ExprL3 •
   33 ExprL3: ExprL3 • '+' ExprL4
   34       | ExprL3 • '-' ExprL4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 31 (ExprL2)


State 96

   33 ExprL3: ExprL3 '+' ExprL4 •
   36 ExprL4: ExprL4 • '*' ExprL5
   37       | ExprL4 • '/' ExprL5
   38       | ExprL4 • '%' ExprL5

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75

    $default  reduce using rule 33 (ExprL3)


State 97

   34 ExprL3: ExprL3 '-' ExprL4 •
   36 ExprL4: ExprL4 • '*' ExprL5
   37       | ExprL4 • '/' ExprL5
   38       | ExprL4 • '%' ExprL5

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75

    $default  reduce using rule 34 (ExprL3)


State 98

   36 ExprL4: ExprL4 '*' ExprL5 •

    $default  reduce using rule 36 (ExprL4)


State 99

   37 ExprL4: ExprL4 '/' ExprL5 •

    $default  reduce using rule 37 (ExprL4)


State 100

   38 ExprL4: ExprL4 '%' ExprL5 •

    $default  reduce using rule 38 (ExprL4)


State 101

   40 ExprL5: ExprL6 '^' ExprL5 •

    $default  reduce using rule 40 (ExprL5)


State 102

    9 Stmt: Printstrings '(' StrList ')' ';' •

    $default  reduce using rule 9 (Stmt)


State 103

   10 Stmt: Printlines '(' ExprL0 ')' ';' •

    $default  reduce using rule 10 (Stmt)


State 104

   11 Stmt: Printspaces '(' ExprL0 ')' ';' •

    $default  reduce using rule 11 (Stmt)


State 105

   12 Stmt: Read '(' IdentList ')' ';' •

    $default  reduce using rule 12 (Stmt)


State 106

   47 IdentList: Id ',' IdentList •

    $default  reduce using rule 47 (IdentList)


State 107

   13 Stmt: IF '(' ExprL0 ')' '{' • StmtSeq '}'
   14     | IF '(' ExprL0 ')' '{' • StmtSeq '}' ELSE '{' StmtSeq '}'

    Ident         shift, and go to state 7
    Print         shift, and go to state 8
    Printstrings  shift, and go to state 9
    Printlines    shift, and go to state 10
    Printspaces   shift, and go to state 11
    Read          shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    FOR           shift, and go to state 15

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq     go to state 110
    Stmt        go to state 17
    AssnmtStmt  go to state 18
    Id          go to state 19


State 108

   15 Stmt: WHILE '(' ExprL0 ')' '{' • StmtSeq '}'

    Ident         shift, and go to state 7
    Print         shift, and go to state 8
    Printstrings  shift, and go to state 9
    Printlines    shift, and go to state 10
    Printspaces   shift, and go to state 11
    Read          shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    FOR           shift, and go to state 15

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq     go to state 111
    Stmt        go to state 17
    AssnmtStmt  go to state 18
    Id          go to state 19


State 109

   16 Stmt: FOR '(' AssnmtStmt ';' ExprL0 • ';' AssnmtStmt ')' '{' StmtSeq '}'
   21 ExprL0: ExprL0 • OR ExprL1
   22       | ExprL0 • AND ExprL1

    OR   shift, and go to state 62
    AND  shift, and go to state 63
    ';'  shift, and go to state 112


State 110

   13 Stmt: IF '(' ExprL0 ')' '{' StmtSeq • '}'
   14     | IF '(' ExprL0 ')' '{' StmtSeq • '}' ELSE '{' StmtSeq '}'

    '}'  shift, and go to state 113


State 111

   15 Stmt: WHILE '(' ExprL0 ')' '{' StmtSeq • '}'

    '}'  shift, and go to state 114


State 112

   16 Stmt: FOR '(' AssnmtStmt ';' ExprL0 ';' • AssnmtStmt ')' '{' StmtSeq '}'

    Ident  shift, and go to state 7

    AssnmtStmt  go to state 115
    Id          go to state 19


State 113

   13 Stmt: IF '(' ExprL0 ')' '{' StmtSeq '}' •
   14     | IF '(' ExprL0 ')' '{' StmtSeq '}' • ELSE '{' StmtSeq '}'

    ELSE  shift, and go to state 116

    $default  reduce using rule 13 (Stmt)


State 114

   15 Stmt: WHILE '(' ExprL0 ')' '{' StmtSeq '}' •

    $default  reduce using rule 15 (Stmt)


State 115

   16 Stmt: FOR '(' AssnmtStmt ';' ExprL0 ';' AssnmtStmt • ')' '{' StmtSeq '}'

    ')'  shift, and go to state 117


State 116

   14 Stmt: IF '(' ExprL0 ')' '{' StmtSeq '}' ELSE • '{' StmtSeq '}'

    '{'  shift, and go to state 118


State 117

   16 Stmt: FOR '(' AssnmtStmt ';' ExprL0 ';' AssnmtStmt ')' • '{' StmtSeq '}'

    '{'  shift, and go to state 119


State 118

   14 Stmt: IF '(' ExprL0 ')' '{' StmtSeq '}' ELSE '{' • StmtSeq '}'

    Ident         shift, and go to state 7
    Print         shift, and go to state 8
    Printstrings  shift, and go to state 9
    Printlines    shift, and go to state 10
    Printspaces   shift, and go to state 11
    Read          shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    FOR           shift, and go to state 15

    $default  reduce using rule 7 (StmtSeq)
